--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -3,14 +3,14 @@
 
 
 <!-- here is the item  -->
-<div class="mt-3 px-5 py-12 bg-gray-200 rounded-xl">
+<div class="px-5 py-12 bg-gray-200 ml-56">
     <h1 class="mb-5 text-2xl text-center">New Products</h1>
     <div class=" grid grid-cols-4 gap-5">
         {% for product in itemss %}
         <div>
-            <a href="#">gd</a>
+            <a href="">gd</a>
             <div>
-                <img src="{{ product.image.url}}" alt="">
+                <img class="" src="{{ product.image.url}}" alt=" {{product.Name}}">
                 <div>
                     <h2 class=" text-2xl">{{product.Name}}</h2>
                     <p>{{ product.price}}</p>
@@ -21,7 +21,17 @@
     </div>
 </div>
 
-
+<!-- Categoris  -->
+<div class="mt-1 px-5 pt-3 bg-gray-100 fixed w-56 h-screen top-20">
+    <h1 class="mb-5 text-2xl text-center">New Products</h1>
+    <div class="gap-5">
+        {% for prod_category in categoriess %}
+        <div class="py-2">
+            <h2 class=" text-2xl">{{prod_category.Name}} : {{prod_category.items.count}}</h2>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 
 
 {% endblock %}
