--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>E shop</title>
 </head>
 <body >
     <!-- top nav -->
@@ -12,7 +12,7 @@
     <a class="text-xl " href="/">E Shop</a>
     <div class="gap-x-5 flex justify-between">
         <a class="bg-teal-400 text-slate-100 px-5 py-2 rounded-md hover:bg-teal-700" href="">Sing in</a>
-        <a class="bg-red-300 text-slate-100 px-5 py-2 rounded-md hover:bg-red-700" href="">Sing up</a>
+        <a class="bg-red-300 text-slate-100 px-5 py-2 rounded-md hover:bg-red-700" href="{% url 'mainapp:singup' %}">Sing up</a>
     </div>
 </nav>
 {% block content%}
