--- a/mainapp/templates/mainapp/singup.html
+++ b/mainapp/templates/mainapp/singup.html
@@ -1,6 +1,34 @@
 {% extends 'mainapp/base.html' %}
+
+{% block title %}Sing Up{% endblock %}
+
 {% block content %}
-
-
+<div class="w-1/2 my-5 mx-auto p-5 bg-teal-100 rounded-xl">
+    <h1 class="mb-5 text-3xl">Sing Up</h1>
+    <form method="post" action=".">
+        {% csrf_token %}
+        <div>
+            <label class="inline-block mb-2" for="">User name</label><br>
+            <input id="your_name" type="text" name="your_name" maxlength="100" required>
+            {{form.username}}
+        </div>
+        <div>
+            <label class="inline-block mb-2" for="">Email</label><br>
+            <input id="your_email" type="text" name="your_email" maxlength="100" required>
+            {{form.email}}
+        </div>
+        <div>
+            <label class="inline-block mb-2" for="">Password</label><br>
+            <input id="password1" type="text" name="password1" maxlength="100" required>
+            {{form.password1}}
+        </div>
+        <div>
+            <label class="inline-block mb-2" for="">Re-enter password</label><br>
+            <input id="password2" type="text" name="password2" maxlength="100" required>
+            {{form.password2}}
+        </div>
+    </form>
+    <button class="px-8 py-3 mt-5 rounded-xl bg-teal-300 hover:bg-teal-700 text-slate-100">Register</button>
+</div>
 
 {% endblock %}
