--- a/mainapp/templates/mainapp/singup.html
+++ b/mainapp/templates/mainapp/singup.html
@@ -27,8 +27,9 @@
             <input class="w-full p-2 rounded-md" id="password2" type="password" name="password2" maxlength="100" required>
             {{form.password2}}
         </div>
+        <button class="px-8 py-3 mt-5 rounded-xl bg-teal-300 hover:bg-teal-700 text-slate-100" type="submit">Register</button>
     </form>
-    <button class="px-8 py-3 mt-5 rounded-xl bg-teal-300 hover:bg-teal-700 text-slate-100">Register</button>
+    
 </div>
 
 {% endblock %}
