--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -8,11 +8,11 @@
     <div class=" grid grid-cols-2 md:grid-cols-3 xl:gtid-cols-4 gap-2 ">
         {% for product in itemss %}
         <div>
-            <a href="#">
+            <a href="{%url 'item:detail' item.id %}">
                 <div>
                     <img class="w-72 h-64 rounded-2xl" src="{{ product.image.url}}" alt=" {{product.Name}}">
                     <div>
-                        <h2 class=" text-2xl">{{product.Name}}</h2>
+                        <h2 class=" text-xl">{{product.Name}}</h2>
                         <p>{{ product.price}}</p>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
     <div class="gap-5">
         {% for prod_category in categoriess %}
         <div class="py-2">
-            <h2 class=" text-2xl">{{prod_category.Name}} : {{prod_category.items.count}}</h2>
+            <h2 class=" text-2xl">{{prod_category.Name}} : {{prod_category.items.count}}</h2><!-- this item is models.py >Item > related_name= "items" -->
         </div>
         {% endfor %}
     </div>
