--- a/item/templates/item/detail.html
+++ b/item/templates/item/detail.html
@@ -1,23 +1,42 @@
 {% extends 'mainapp/base.html' %}
-{% block title %} {{product.Name}}
-{% endblock %}
+{% block title %} {{item.Name}}{% endblock %}
 
 {% block content%}
 
-<div class="grid grid-cols-5 gap-5">
+<div class="grid grid-cols-5 gap-5 bg-gray-100">
     <div class="col-span-3 rounded">
-        <img src="{{  product.image.url  }}" alt="">
+        <img class="w-1/2" src="{{  item.image.url  }}" alt="">
     </div>
     <div class="col-span-2 p-5 bg-teal-200 rounded-xl">
-        <h1 class="mb-5 text-3xl"> <strong class="font-semibold">{{ product.name }}</strong></h1>
-        <p class="text-xl">Price: {{ product.price }}</p>
-        <p>Vendor: {{ product.created_by.username }}</p>
+        <h1 class="mb-5 text-3xl"> <strong class="font-semibold">{{ item.Name }}</strong></h1>
+        <p class="text-xl">Price: {{ item.price }}</p>
 
-        <p>Product Details: <br>
-            <span>{{ product.description }}</span>
+        <p><strong>Product Details:</strong><br>
+            <span class="">{{ item.description }}</span>
         </p>
+
+        <p class="">Vendor: {{ item.created_by.username }}</p>
+        <a href="#" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Contact with vendor</a>
     </div>
-    <a href="#" class="mt-5 px-">Contact with vendor</a>
+    
+</div>
+<!-- Related items -->
+
+<div class="mt-10 bg-gray-200">
+    <h2 class="text-2xl text-center">Related items</h2>
+    <div>
+        {% for item in related_items %}
+        <div class="bg-gray-300 w-76 rounded-2xl">
+            <a href="{%url 'item:detail' item.id%}">
+                <img src="{{ item.image.url }}" alt="">
+                <div>
+                    <h2>{{item.Name}}</h2>
+                    <p>{{item.price}}</p>
+                </div>
+            </a>
+        </div>
+        {% endfor %}
+    </div>
 </div>
 
 
