--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>E shop {% block title%} {% endblock%}</title>
+    <title>E shop /{% block title%} {% endblock%}</title>
 </head>
 <body >
     <!-- top nav -->
