--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -1,19 +1,19 @@
 {% extends 'mainapp/base.html' %}
+{% block title %} {% endblock %}
 {% block content %}
 
 
 <!-- here is the item  -->
 <div class="px-5 py-12 bg-gray-200 ml-56">
     <h1 class="mb-5 text-2xl text-center">New Products</h1>
-    <div class=" grid grid-cols-2 md:grid-cols-3 xl:gtid-cols-4 gap-2 ">
-        {% for product in itemss %}
+    <div class=" grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-2 ">
+        {% for item in itemss %}
         <div>
             <a href="{%url 'item:detail' item.id %}">
-                <div>
-                    <img class="w-72 h-64 rounded-2xl" src="{{ product.image.url}}" alt=" {{product.Name}}">
+                <div class="bg-gray-300 w-76 rounded-2xl">
+                    <img class="w-76 h-64 rounded-t-2xl" src="{{ item.image.url}}" alt="">
                     <div>
-                        <h2 class=" text-xl">{{product.Name}}</h2>
-                        <p>{{ product.price}}</p>
+                        <h2 class="text-center text-xl">{{item.Name}} : {{ item.price}}</h2>
                     </div>
                 </div>
             </a>
