--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>E shop /{% block title%} {% endblock%}</title>
+    <title>E shop {% block title%} {% endblock%}</title>
 </head>
 <body >
     <!-- top nav -->
     <nav class="px-10 py-5 border-solid border-2 border-slate-400  flex item-center justify-between">
     <a class="text-xl " href="/">E Shop</a>
     <div class="gap-x-5 flex justify-between">
-        <a class="bg-teal-400 text-slate-100 px-5 py-2 rounded-md hover:bg-teal-700" href="{% url 'mainapp:login' %}">Log in</a>
-        <a class="bg-red-300 text-slate-100 px-5 py-2 rounded-md hover:bg-red-700" href="{% url 'mainapp:singup' %}">Sing up</a>
+        <a class="bg-teal-400 text-slate-100 px-5 py-2 rounded-md hover:bg-teal-700" href="{% url 'mainapp:signin' %}">Sign in</a>
+        <a class="bg-red-300 text-slate-100 px-5 py-2 rounded-md hover:bg-red-700" href="{% url 'mainapp:signup' %}">Sing up</a>
     </div>
 </nav>
 {% block content%}
