--- a/mainapp/templates/mainapp/signin.html
+++ b/mainapp/templates/mainapp/signin.html
@@ -8,12 +8,22 @@
         {% csrf_token %}
         <div class="mb-5">
             <label class="inline-block mb-2 text-xl" for="">Email</label><br>
-            {{form.email}}
+            {{form.username}}
         </div>
         <div>
             <label class="inline-block mb-2 text-xl" for="">Password</label><br>
             {{form.password}}
         </div>
+        {% if form.errors or form.non_field_errors %}
+        <div class="mb-3 p-6 bg-red-100 rounded-xl">
+            {% for field in form %}
+                {{ field.errors }}
+            {% endfor %}
+            {{ form.non_field_errors }}
+        </div>
+        {% endif %}
+
+        <button class="py-4 px-8 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Sign in</button>
     </form>
 </div>
 
