--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -10,8 +10,8 @@
         {% for item in itemss %}
         <div>
             <a href="{%url 'item:detail' item.id %}">
-                <div class="bg-gray-300 w-76 rounded-2xl">
-                    <img class="w-76 h-64 rounded-t-2xl" src="{{ item.image.url}}" alt="">
+                <div class="bg-gray-300 w-76 h-64 rounded-2xl">
+                    <img class="w-full h-60 rounded-t-2xl" src="{{ item.image.url}}" alt="">
                     <div>
                         <h2 class="text-center text-xl">{{item.Name}} : {{ item.price}}</h2>
                     </div>
