--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -11,9 +11,26 @@
     <nav class="px-10 py-5 border-solid border-2 border-slate-400  flex item-center justify-between">
     <a class="text-xl " href="/">E Shop</a>
     <div class="gap-x-5 flex justify-between">
-        <a class="px-5 py-2 rounded-md hover:bg-teal-200" href="#">+items</a>
-        <a class="bg-teal-400 text-slate-100 px-5 py-2 rounded-md hover:bg-teal-700" href="{% url 'mainapp:signin' %}">Sign in</a>
-        <a class="bg-red-300 text-slate-100 px-5 py-2 rounded-md hover:bg-red-700" href="{% url 'mainapp:signup' %}">Sing up</a>
+
+        <a class="px-2 py-2 rounded-md hover:bg-teal-200"
+        href="{% url 'item:add' %}">+items</a>
+
+        <a class="bg-teal-300 px-5 py-2 rounded-md hover:bg-teal-600"
+        href="#">Filter</a>
+
+        {% if request.user.is_authenticated %}
+        <a class="bg-teal-300 px-5 py-2 rounded-md hover:bg-teal-600"
+        href="#">go to dashboard</a>
+
+        <a class="bg-red-300 text-slate-100 px-2 py-2 rounded-md hover:bg-red-700"
+        href="{% url 'mainapp:logout' %}">Log out</a>
+        {% else %}
+        <a class="bg-teal-400 text-slate-100 px-5 py-2 rounded-md hover:bg-teal-700"
+        href="{% url 'mainapp:signin' %}">Sign in</a>
+
+        <a class="bg-red-300 text-slate-100 px-5 py-2 rounded-md hover:bg-red-700"
+        href="{% url 'mainapp:signup' %}">Sing up</a>
+        {% endif %}
     </div>
 </nav>
 {% block content%}
