deshboard add done

--- a/item/templates/item/form.html
+++ b/item/templates/item/form.html
@@ -1,5 +1,5 @@
 {% extends 'mainapp/base.html' %}
-{% block title %} {{ title }} {% endblock %}
+{% block title %}/ {{ title }} {% endblock %}
 
 {% block content %}
 <h1 class="mb-5 text-2xl">{{title}}</h1>
