--- a/mainapp/templates/mainapp/signup.html
+++ b/mainapp/templates/mainapp/signup.html
@@ -1,6 +1,6 @@
 {% extends 'mainapp/base.html' %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}/ Sign Up{% endblock %}
 
 {% block content %}
 <div class="w-1/2 my-5 mx-auto p-5 bg-teal-100 rounded-xl">
