--- a/item/templates/item/detail.html
+++ b/item/templates/item/detail.html
@@ -1,5 +1,5 @@
 {% extends 'mainapp/base.html' %}
-{% block title %} {{item.Name}}{% endblock %}
+{% block title %}/ {{item.Name}}{% endblock %}
 
 {% block content%}
 
