--- a/mainapp/templates/mainapp/signin.html
+++ b/mainapp/templates/mainapp/signin.html
@@ -1,5 +1,5 @@
 {% extends 'mainapp/base.html' %}
-{% block title %}Sign in{% endblock %}
+{% block title %}/ Sign in{% endblock %}
 
 {% block content %}
 <div class="bg-teal-100 w-1/2 mx-auto p-5 rounded-xl">
