edit & delete done

--- a/item/templates/item/detail.html
+++ b/item/templates/item/detail.html
@@ -15,8 +15,17 @@
             <span class="">{{ item.description }}</span>
         </p>
 
+        {% if request.user == item.created_by %}
+        <div class="mt-5 grid grid-cols-5 gap-5">
+            <a href="{% url 'item:edit' item.id %}" class="bg-teal-400 text-slate-100 py-2 px-3 rounded-md hover:bg-teal-700">Edit</a>
+            <a href="{% url 'item:delete' item.id %}" class="bg-red-300 text-slate-100 py-2 px-3 rounded-md hover:bg-red-700">Delete</a>
+        </div>
+
+        {% else %}
         <p class="">Vendor: {{ item.created_by.username }}</p>
         <a href="#" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Contact with vendor</a>
+
+        {% endif %}
     </div>
     
 </div>
