--- a/item/templates/item/form.html
+++ b/item/templates/item/form.html
@@ -2,15 +2,16 @@
 {% block title %}/ {{ title }} {% endblock %}
 
 {% block content %}
-<h1 class="mb-5 text-2xl">{{title}}</h1>
+<h1 class="mb-5 text-2xl text-center">{{title}}</h1>
 <form method="post" action="." enctype="multipart/form-data">
     {% csrf_token %}
 
-    <div>
-        {{ form.as_p }}
-    </div>
-
-    {% if form.errors or form.non_field_errors %}
+    <div class="w-1/2 mx-auto p-5 bg-red-100 rounded-xl">
+        <div class="mx-auto w-full">
+            {{ form.as_p }}
+        </div>
+        
+        {% if form.errors or form.non_field_errors %}
         <div class="mb-3 p-6 bg-red-100 rounded-xl">
             {% for field in form %}
                 {{ field.errors }}
@@ -18,7 +19,14 @@
             {{ form.non_field_errors }}
         </div>
         {% endif %}
-        <button class="ml-5 py-2 px-5 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Add item</button>
+        <button class="mt-5 py-4 px-8 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">
+            {% if form.new %}
+                Create Item
+            {% else %}
+                Update Item
+            {% endif %}
+        </button>
+    </div>
 </form>
 
 
