--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -16,7 +16,7 @@
         href="{% url 'item:add' %}">+items</a>
 
         <a class="bg-teal-300 px-5 py-2 rounded-md hover:bg-teal-600"
-        href="#">Filter</a>
+        href="{% url 'item:items' %}">Filter</a>
 
         {% if request.user.is_authenticated %}
         <a class="bg-teal-300 px-5 py-2 rounded-md hover:bg-teal-600"
