--- a/item/templates/item/items.html
+++ b/item/templates/item/items.html
@@ -14,7 +14,16 @@
             </li>
         {% endfor %}
         </ul>
+
+        <!-- <form method="get" action="{% url 'item:items' %}">
+            <input name="query" type="text" value="{{ query }}" placeholder="Search product by name or description....">
+            <button class="px-2 py-4 mt-2 bg-teal-400 text-white rounded-xl">Search Product</button>
+        </form> -->
+
     </div>
+
+
+
     <div class=" grid col-span-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-2 ">
         {% for item in items %}
         <div>
