--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -10,6 +10,14 @@
     <!-- top nav -->
     <nav class="px-10 py-5 border-solid border-2 border-slate-400  flex item-center justify-between">
     <a class="text-xl " href="/">E Shop</a>
+
+    <div class="w-1/2 text-center border-3">
+        <form method="get" action="{% url 'item:items' %}">
+            <input class="w-1/3 py-2 px-5 rounded-xl" name="query" type="text" value="{{ query }}" placeholder="Search product by name or description....">
+            <button class="px-2 py-2 bg-teal-400 text-white rounded-xl">Search Product</button>
+        </form>
+    </div>
+
     <div class="gap-x-5 flex justify-between">
 
         <a class="px-2 py-2 rounded-md hover:bg-teal-200"
