--- a/item/templates/item/detail.html
+++ b/item/templates/item/detail.html
@@ -23,7 +23,8 @@
 
         {% else %}
         <p class="">Vendor: {{ item.created_by.username }}</p>
-        <a href="#" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Contact with vendor</a>
+        <a href="{% url 'messaging:new' item.id %}"
+        class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Contact with vendor</a>
 
         {% endif %}
     </div>
