--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>E shop {% block title%} {% endblock%}</title>
 </head>
 <body >
@@ -14,7 +15,7 @@
     <div class="w-1/2 text-center border-3">
         <form method="get" action="{% url 'item:items' %}">
             <input class="w-1/3 py-2 px-5 rounded-xl" name="query" type="text" value="{{ query }}" placeholder="Search product by name or description....">
-            <button class="px-2 py-2 bg-teal-400 text-white rounded-xl">Search Product</button>
+            <button class="px-2 py-2 bg-teal-400 text-white rounded-xl"><span class="material-symbols-outlined">search</span></button>
         </form>
     </div>
 
@@ -27,6 +28,9 @@
         href="{% url 'item:items' %}">Filter</a>
 
         {% if request.user.is_authenticated %}
+        <a class="bg-teal-300 px-5 py-2 rounded-md hover:bg-teal-600"
+        href="{% url 'messaging:inbox' %}"><span class="material-symbols-outlined text-slate-100">chat</span></a>
+
         <a class="bg-teal-300 px-5 py-2 rounded-md hover:bg-teal-600"
         href="{% url 'deshboard:index' %}">go to dashboard</a>
 
