--- a/messaging/templates/messaging/detail.html
+++ b/messaging/templates/messaging/detail.html
@@ -18,11 +18,11 @@
     
     <form method="post" action="." class="py-2">
         {% csrf_token %}
-        <div class="">
+        <div class=" flex justify-initial w-full">
             <div>
                 {{form.as_p}}
             </div>
-            <button class=""><span class="material-symbols-outlined">send</span></button>
+            <button class="my-5 text-right"><span class="material-symbols-outlined">send</span></button>
         </div>
     </form>
 </div>
